--- a/plop-templates/page-templates/form-templates/index.js.hbs
+++ b/plop-templates/page-templates/form-templates/index.js.hbs
@@ -1,2 +1,2 @@
-import SignUpForm from './SignUp.form'
-export default SignUpForm
+import {{name}}Form from './{{name}}.form'
+export default {{name}}Form
