wip add plop route

--- a/plop-templates/_page-modify-App.js.hbs
+++ b/plop-templates/_page-modify-App.js.hbs
@@ -1,4 +1,4 @@
-      <Route type=\'SIGNIN\'>
-    <SignInForm />
-  </Route>
-</AppProvider>
+  <Route type='{{constantCase name}}_ADD'>
+        <{{name}}Form />
+      </Route>
+    </AppProvider>
