wip add first list template

--- a/plop-templates/_page-modify-App.js.hbs
+++ b/plop-templates/_page-modify-App.js.hbs
@@ -1,4 +1,4 @@
-  <Route type='{{constantCase name}}_ADD'>
-        <{{name}}Form />
+  <Route type='{{constantCase name}}_List'>
+        <{{name}}List />
       </Route>
     </AppProvider>
