wip add first list template, add contacts list

--- a/plop-templates/_page-modify-App.js.hbs
+++ b/plop-templates/_page-modify-App.js.hbs
@@ -1,4 +1,4 @@
-  <Route type='{{constantCase name}}_List'>
+  <Route type='{{constantCase name}}_LIST'>
         <{{name}}List />
       </Route>
     </AppProvider>
