wip list template

--- a/plop-templates/page-templates/list-templates/{{name}}.list.jsx.hbs
+++ b/plop-templates/page-templates/list-templates/{{name}}.list.jsx.hbs
@@ -1,4 +1,5 @@
 import { Button, Container, CssBaseline } from '@material-ui/core'
+import {select{{ name }}TableData} from {{lowercase name}}List.selectors.js
 import React, {memo} from 'react'
 
 const {{name}}List = () => {
