--- a/plop-templates/page-templates/form-templates/{{name}}.form.spec.js.hbs
+++ b/plop-templates/page-templates/form-templates/{{name}}.form.spec.js.hbs
@@ -1,5 +1,5 @@
 import renderer from 'react-test-renderer'
-import AppProvider from '../../AppProvider.js'
+import AppProvider from '.../../../AppProvider.js'
 import {{name}}Form from './{{name}}.form.jsx';
 
 xit('renders correctly', () => {
