--- a/plop-templates/page-templates/form-templates/{{name}}FieldGroup.jsx.hbs
+++ b/plop-templates/page-templates/form-templates/{{name}}FieldGroup.jsx.hbs
@@ -1,13 +1,9 @@
 import { Button, Container, CssBaseline } from '@material-ui/core'
 import React, {memo} from 'react'
-import SimpleForm from '../../form/SimpleForm'
-import InputField from '../../form/Input.field'
+import InputField from '../../../form/Input.field'
 import {{name}}Validate from './{{name}}Validate'
-import { createUserAccount } from '../../store/auth.duck'
-import { useActions } from '../../hooks/useActions'
 
 const {{name}}Form = () => {
-  const handleSubmit = useActions(createUserAccount)
   return (
     <>
       <InputField fieldId='email' label='E-mail Address' />
