--- a/plop-templates/page-templates/form-templates/{{name}}.form.jsx.hbs
+++ b/plop-templates/page-templates/form-templates/{{name}}.form.jsx.hbs
@@ -1,7 +1,7 @@
 import { Button, Container, CssBaseline } from '@material-ui/core'
 import React, {memo} from 'react'
 import SimpleForm from '../../../form/SimpleForm'
-import {{name}}Validate from './{{name}}Validate'
+import {{camelCase name}}Validate from './{{camelCase name}}Validate'
 import { upsert{{name}} } from './{{camelCase name}}Actions'
 import { useActions } from '../../../hooks/useActions'
 import {{name}}FieldGroup from './{{name}}FieldGroup'
