--- a/plop-templates/fragment-templates/page/form/LeftDrawer.jsx.hbs
+++ b/plop-templates/fragment-templates/page/form/LeftDrawer.jsx.hbs
@@ -1,4 +1,4 @@
-  <ListItem button component={Link} to='//{{lowerCase name}}/form'>
+  <ListItem button component={Link} to='/{{lowerCase name}}/add'>
           <ListItemIcon><AddCircleOutlineIcon /></ListItemIcon>
           <ListItemText primary='{{titleCase name}}' />
         </ListItem>
