--- a/plop-templates/page-templates/form-templates/{{name}}.form.jsx.hbs
+++ b/plop-templates/page-templates/form-templates/{{name}}.form.jsx.hbs
@@ -11,7 +11,7 @@ const {{name}}Form = () => {
   return (
     <Container>
       <CssBaseline />
-      <SimpleForm onSubmit={handleSubmit} validate={ {camelCase {name}}Validate}>
+      <SimpleForm onSubmit={handleSubmit} validate={ {{camelCase name}}Validate}>
         <{{name}}FieldGroup />
         <Button type='submit' variant='contained' color='inherit'>
           Submit
