--- a/plop-templates/page-templates/grid-templates/{{name}}.grid.jsx.hbs
+++ b/plop-templates/page-templates/grid-templates/{{name}}.grid.jsx.hbs
@@ -1,6 +1,6 @@
 import { Container } from '@material-ui/core'
 import { DataGrid } from '@material-ui/data-grid'
-import {select{{ name }}TableData} from {{lowercase name}}Grid.selectors.js
+import {select{{ name }}TableData} from {{lowerCase name}}Grid.selectors.js
 import React, {memo} from 'react'
 import { select{{name}}GridData } from './{{name}}Grid.selectors'
 
@@ -13,10 +13,10 @@ const columns = [
 const {{name}}Grid = () => {
   return (
     <Container>
-        const {{lowercase name}}GridData = useSelector(select{{name}}GridData)
+        const {{lowerCase name}}GridData = useSelector(select{{name}}GridData)
         return (
           <Container style={ { height: 600, width: '100%' } }>
-            <DataGrid rows={ {{lowercase name}}GridData} columns={columns} />
+            <DataGrid rows={ {{lowerCase name}}GridData} columns={columns} />
           </Container>
         )
     </Container>
