--- a/plop-templates/page-templates/grid-templates/{{name}}.grid.jsx.hbs
+++ b/plop-templates/page-templates/grid-templates/{{name}}.grid.jsx.hbs
@@ -1,6 +1,6 @@
 import { Container } from '@material-ui/core'
 import { DataGrid } from '@material-ui/data-grid'
-import {select{{ name }}TableData} from {{lowerCase name}}Grid.selectors.js
+import {select{{ name }}TableData} from '{{lowerCase name}}Grid.selectors.js'
 import React, {memo} from 'react'
 import { select{{name}}GridData } from './{{name}}Grid.selectors'
 
