--- a/plop-templates/page-templates/grid-templates/{{lowercase name}}Grid.selectors.js.hbs
+++ b/plop-templates/page-templates/grid-templates/{{lowercase name}}Grid.selectors.js.hbs
@@ -5,5 +5,5 @@ const EMPTY_OBJECT = {}
 const selectFirebase = state => state.firebase || EMPTY_OBJECT
 
 const selectOrdered = createSelector(selectFirebase, f => f.ordered || EMPTY)
-const select{{ name }} = createSelector(selectOrdered, s => s.{{ name }} || EMPTY)
+const select{{ name }} = createSelector(selectOrdered, s => s.{{ camelCase name }} || EMPTY)
 export const select{{ name }}GridData = createSelector(select{{ name }}, {{ name }}Grid => {{ name }}Grid.map({{ name }} => ({...{{ name }}.value, id: {{ name }}.key})))
