--- a/plop-templates/page-templates/_fragments/form/LeftDrawer.jsx.hbs
+++ b/plop-templates/page-templates/_fragments/form/LeftDrawer.jsx.hbs
@@ -1,5 +1,5 @@
-  <ListItem button component={Link} to='/{{lowerCase name}}/add'>
+  <ListItemLink routeKey='{{constantCase name}}_ADD'>
           <ListItemIcon><AddCircleOutlineIcon /></ListItemIcon>
           <ListItemText primary='{{titleCase name}}' />
-        </ListItem>
+        </ListItemLink>
       </List>
