add title control

--- a/plop-templates/page-templates/_fragments/grid/LeftDrawer.jsx.hbs
+++ b/plop-templates/page-templates/_fragments/grid/LeftDrawer.jsx.hbs
@@ -1,5 +1,5 @@
   <ListItemLink routeKey='{{constantCase name}}'>
             <ListItemIcon><SettingsIcon  /></ListItemIcon>
           <ListItemText primary='{{titleCase name}}' />
-        </ListItem>
+        </ListItemLink>
       </List>
