--- a/plop-templates/page-templates/_fragments/grid/MainContent.jsx.hbs
+++ b/plop-templates/page-templates/_fragments/grid/MainContent.jsx.hbs
@@ -1,4 +1,4 @@
-  <Route type='{{constantCase name}}_ADD'>
+  <Route type='{{constantCase name}}'>
         <{{name}}{{type}} />
       </Route>
     </AppProvider>
