--- a/plop-templates/page-templates/list-templates/index.js.hbs
+++ b/plop-templates/page-templates/list-templates/index.js.hbs
@@ -1,2 +1,2 @@
-import {{name}}Form from './{{name}}.form'
-export default {{name}}Form
+import {{name}}{{type}} from './{{name}}.{{lowerCase type}}'
+export default {{name}}{{type}}
