--- a/plop-templates/page-templates/form-templates/{{camelCase name}}Validate.js.hbs
+++ b/plop-templates/page-templates/form-templates/{{camelCase name}}Validate.js.hbs
@@ -1,4 +1,7 @@
-import {getFuncValidateFields, isEmailInvalid, isRequired} from '../../../form/validationHelpers'
+import {
+  getFuncValidateFields
+  // isEmailInvalid, isRequired
+} from '../../../form/validationHelpers'
 
 const {{camelCase name}}Validate = getFuncValidateFields.x({
   
