--- a/plop-templates/plop-generator_file.hbs
+++ b/plop-templates/plop-generator_file.hbs
@@ -10,12 +10,12 @@ module.exports = {
   actions: [
     {
       type: 'add',
-      path: 'src/store/ducks/{{name}}.duck.js',
+      path: 'src/store/ducks/{{namePrompt}}.duck.js',
       templateFile: 'plop-templates/Duck.js.hbs'
     },
     {
       type: 'add',
-      path: 'src/store/ducks/{{name}}.duck.spec.js',
+      path: 'src/store/ducks/{{namePrompt}}.duck.spec.js',
       templateFile: 'plop-templates/Duck.spec.js.hbs'
     },
     {
@@ -24,7 +24,7 @@ module.exports = {
       path: 'src/store/rootReducer.js',
       // Pattern tells plop where in the file to inject the template
       pattern: 'import { connectRoutes } from \'redux-first-router\'',
-      template: 'import {{name}} from \'./ducks/{{name}}.duck\';'
+      template: 'import {{namePrompt}} from \'./ducks/{{namePrompt}}.duck\';'
     },
     {
       // Action type 'append' injects a template into an existing file
@@ -32,7 +32,7 @@ module.exports = {
       path: 'src/store/rootReducer.js',
       // Pattern tells plop where in the file to inject the template
       pattern: 'combineReducers({',
-      template: '{{name}},'
+      template: '{{namePrompt}},'
     }
   ]
 }
