--- a/plop-templates/plop-generator_file.hbs
+++ b/plop-templates/plop-generator_file.hbs
@@ -1,5 +1,5 @@
 module.exports = {
-  description: 'create a redux slice with redux-toolkit',
+  description: 'create a {{name}}',
   prompts: [
     {
       type: 'input',
@@ -10,29 +10,8 @@ module.exports = {
   actions: [
     {
       type: 'add',
-      path: 'src/store/ducks/{{namePrompt}}.duck.js',
-      templateFile: 'plop-templates/Duck.js.hbs'
-    },
-    {
-      type: 'add',
-      path: 'src/store/ducks/{{namePrompt}}.duck.spec.js',
-      templateFile: 'plop-templates/Duck.spec.js.hbs'
-    },
-    {
-      // Action type 'append' injects a template into an existing file
-      type: 'append',
-      path: 'src/store/rootReducer.js',
-      // Pattern tells plop where in the file to inject the template
-      pattern: 'import { connectRoutes } from \'redux-first-router\'',
-      template: 'import {{namePrompt}} from \'./ducks/{{namePrompt}}.duck\';'
-    },
-    {
-      // Action type 'append' injects a template into an existing file
-      type: 'append',
-      path: 'src/store/rootReducer.js',
-      // Pattern tells plop where in the file to inject the template
-      pattern: 'combineReducers({',
-      template: '{{namePrompt}},'
+      path: './{{namePrompt}}.js',
+      templateFile: 'plop-templates/{{name}}.js.hbs'
     }
   ]
 }
