feat(plop): add screen fragments

--- a/plop-templates/plop-generator_folder.hbs
+++ b/plop-templates/plop-generator_folder.hbs
@@ -13,8 +13,8 @@ module.exports = {
       {
         type: 'addMany',
         destination: './',
-        base: 'plop-templates/{{namePromptCamel}}-templates/',
-        templateFiles: 'plop-templates/{{namePromptCamel}}-templates/*.hbs'
+        base: 'plop-templates/{{promptNameCamel}}-templates/',
+        templateFiles: 'plop-templates/{{promptNameCamel}}-templates/*.hbs'
       }
     ]
     return actions
