feet(plop): update screens template

--- a/plop-templates/plop-generator_file.hbs
+++ b/plop-templates/plop-generator_file.hbs
@@ -10,6 +10,7 @@ module.exports = {
   actions: [
     {
       type: 'add',
+      // todo: update path
       path: './{{namePrompt}}.js',
       templateFile: 'plop-templates/{{name}}.js.hbs'
     }
