--- a/plop-templates/plop-generator_folder.hbs
+++ b/plop-templates/plop-generator_folder.hbs
@@ -12,6 +12,7 @@ module.exports = {
     const actions = [
       {
         type: 'addMany',
+        // todo: update path
         destination: './',
         base: 'plop-templates/{{promptNameCamel}}-templates/',
         templateFiles: 'plop-templates/{{promptNameCamel}}-templates/*.hbs'
