--- a/plop-templates/screen-templates/_fragments/MainContent.jsx.hbs
+++ b/plop-templates/screen-templates/_fragments/MainContent.jsx.hbs
@@ -1,4 +1,4 @@
-  <Route type='{{constantCase name}}'>
-        <{{name}}{{type}} />
+      <Route type='{{constantCase name}}'>
+        <{{pascalCase name}} />
       </Route>
     </>
