--- a/plop-templates/screen-templates/index.js.hbs
+++ b/plop-templates/screen-templates/index.js.hbs
@@ -1,2 +1,2 @@
-import {{name}} from './{{name}}'
-export default {{name}}
+import {{pascalCase name}} from './{{pascalCase name}}'
+export default {{pascalCase name}}
