wip(plop): add form fields

--- a/plop-templates/plop-generator_folder.hbs
+++ b/plop-templates/plop-generator_folder.hbs
@@ -14,8 +14,8 @@ module.exports = {
         type: 'addMany',
         // todo: update path
         destination: './',
-        base: 'plop-templates/{{promptNameCamel}}-templates/',
-        templateFiles: 'plop-templates/{{promptNameCamel}}-templates/*.hbs'
+        base: 'plop-templates/{{name}}-templates/',
+        templateFiles: 'plop-templates/{{name}}-templates/*.hbs'
       }
     ]
     return actions
