--- a/plop-templates/page-templates/form-templates/{{name}}FieldGroup.jsx.hbs
+++ b/plop-templates/page-templates/form-templates/{{name}}FieldGroup.jsx.hbs
@@ -5,7 +5,9 @@ import InputField from '../../../form/Input.field'
 const {{name}}Form = () => {
   return (
     <>
-      <InputField fieldId='email' label='E-mail Address' />
+      {{#each field}}
+        <InputField fieldId='{{id}}' label='{{id titleCase}}' />
+      {{/each}}
     </>
   )
 }
