--- a/plop-templates/page-templates/form-templates/{{name}}FieldGroup.jsx.hbs
+++ b/plop-templates/page-templates/form-templates/{{name}}FieldGroup.jsx.hbs
@@ -5,9 +5,7 @@ import InputField from '../../../form/Input.field'
 const {{name}}Form = () => {
   return (
     <>
-      {{#each field}}
-        <InputField fieldId='{{id}}' label='{{id titleCase}}' />
-      {{/each}}
+      <InputField fieldId='email' label='E-mail Address' />
     </>
   )
 }
