--- a/plop-templates/screen-templates/{{pascalCase name}}.jsx.hbs
+++ b/plop-templates/screen-templates/{{pascalCase name}}.jsx.hbs
@@ -1,10 +1,10 @@
-import { Button, Container, CssBaseline } from '@material-ui/core'
+import { Container } from '@material-ui/core'
 import React, {memo} from 'react'
 
 const {{pascalCase name}} = () => {
   return (
     <Container>
-      todo: add list stuff !!!
+      todo: add stuff here !!!
     </Container>
   )
 }
