feat(plop): fix form

--- a/plop-templates/form-templates/index.js.hbs
+++ b/plop-templates/form-templates/index.js.hbs
@@ -1,2 +1,2 @@
-import {{name}}Form from './{{name}}.form'
-export default {{name}}Form
+import {{pascalCase  name}}Form from './{{pascalCase name}}.form'
+export default {{pascalCase name}}Form
