--- a/plop-templates/form-templates/{{pascalCase name}}.form.spec.js.hbs
+++ b/plop-templates/form-templates/{{pascalCase name}}.form.spec.js.hbs
@@ -1,12 +1,12 @@
 import renderer from 'react-test-renderer'
 import AppProvider from '.../../../AppProvider.js'
-import {{name}}Form from './{{name}}.form.jsx';
+import {{pascalCase name}}Form from './{{pascalCase name}}.form.jsx';
 
 xit('renders correctly', () => {
   const tree = renderer
     .create(
       <AppProvider>
-        <{{name}}Form />
+        <{{pascalCase name}}Form />
       </AppProvider>
     )
     .toJSON()
