feat(plop): add table

--- a/plop-templates/table-templates/{{pascalCase name}}.table.jsx.hbs
+++ b/plop-templates/table-templates/{{pascalCase name}}.table.jsx.hbs
@@ -6,7 +6,7 @@ import { useSelector } from 'react-redux'
 
 const columns = [
       {{#each field}}
-        { field: {{id}}}, headerName: {{titleCase id}}, width: 150 }, 
+        { field: '{{id}}', headerName: '{{titleCase id}}', width: 150 }, 
         
       {{/each}}
 
