feat(route): add exact

--- a/plop-templates/screen-templates/_fragments/Title.jsx.hbs
+++ b/plop-templates/screen-templates/_fragments/Title.jsx.hbs
@@ -1,2 +1,4 @@
 HOME: 'Home',
 {{constantCase name}}: '{{titleCase name}}',
+{{constantCase name}}_ADD: 'Add {{titleCase name}}',
+{{constantCase name}}_EDIT: 'Edit {{titleCase name}}',
