--- a/plop-templates/screen-templates/_fragments/routePaths.js.hbs
+++ b/plop-templates/screen-templates/_fragments/routePaths.js.hbs
@@ -1,2 +1,4 @@
 HOME: '/',
 {{constantCase name}}: '/{{lowerCase name}}',
+{{constantCase name}}_ADD: '/{{lowerCase name}}/add',
+{{constantCase name}}_EDIT: '/{{lowerCase name}}/:{{lowerCase name}}Id',
