fix(pop): table and action

--- a/plop-templates/form-templates/{{camelCase name}}Actions.js.hbs
+++ b/plop-templates/form-templates/{{camelCase name}}Actions.js.hbs
@@ -4,7 +4,7 @@ export const upsert{{pascalCase name}} = (payload, form) => (dispatch, getState,
     .ref('{{camelCase name}}')
     .push()
   newRef.set(payload)
-    .then(() => dispatch({ type: 'HOME' }))
+    .then(() => dispatch({ type: '{{constantCase name}}' }))
     .then(form.restart)
     .catch(function (error) {
       const errorMessage = error.message
