--- a/plop-templates/form-templates/index.js.hbs
+++ b/plop-templates/form-templates/index.js.hbs
@@ -1,2 +1,7 @@
 import {{pascalCase  name}}Form from './{{pascalCase name}}.form'
+import {{pascalCase  name}}EditForm from './{{pascalCase name}}Edit.form'
+
+export { {{pascalCase  name}}EditForm }
+
 export default {{pascalCase name}}Form
+
