feat(plop): add fields to validation

--- a/plop-templates/form-templates/{{camelCase name}}Validate.js.hbs
+++ b/plop-templates/form-templates/{{camelCase name}}Validate.js.hbs
@@ -1,10 +1,13 @@
 import {
-  getFuncValidateFields
-  // isEmailInvalid, isRequired
+  getFuncValidateFields,
+  isRequired,
+  getIsTooLong,
 } from '../../../form/validationHelpers'
 
 const {{camelCase name}}Validate = getFuncValidateFields.x({
-  
+  {{#each field}}
+    {{id}}: [isRequired, getIsTooLong(100)],
+  {{/each}}
 })
 
 export default {{camelCase name}}Validate
