feat(plop): add icon pick

--- a/plop-templates/screen-templates/_fragments/LeftDrawer.jsx.hbs
+++ b/plop-templates/screen-templates/_fragments/LeftDrawer.jsx.hbs
@@ -1,5 +1,5 @@
   <ListItemLink routeKey='{{constantCase name}}'>
-            <ListItemIcon><SettingsIcon  /></ListItemIcon>
+            <ListItemIcon><Icon iconName='{{icon}}'  /></ListItemIcon>
           <ListItemText primary='{{titleCase name}}' />
         </ListItemLink>
       </List>
